# agentic-ops-platform

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
connectors/gcp-pubsub-connector/: Dockerfile  connector.yaml  main.py
connectors/servicenow-connector/: Dockerfile  connector.yaml  main.py
control-plane-ui/: Dockerfile  biome.json  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
deploy/: docker-compose.yml
deploy/gcp/: README.md  connector.service.yaml  control-plane-ui.service.yaml  gateway.service.yaml  mcp.service.yaml  runtime-job.yaml  session-manager.service.yaml
docs/: architecture.md  configuration.md  connectors.md  deployment.md  mcps.md  memory.md  security.md  workflow-authoring.md
examples/workflow-repo/: README.md  litellm.config.example.yaml  platform-config.example.yaml
gateway/: Dockerfile  api.py  approval_broker.py  decompose.py  event_collector.py  main.py  mattermost.py  message.py  plugin_dir.py  provisioner.py  scheduler.py
hooks/: auto_recall_hook.py  retain_incident_hook.py
mcps/: Dockerfile  common.py  requirements.txt
mcps/core/: __init__.py  mcp_memory.py  mcp_message.py  mcp_platform.py
mcps/integrations/: __init__.py  mcp_cloudwatch.py  mcp_jira.py  mcp_salesforce.py  mcp_splunk.py
runtime/: Dockerfile  requirements.txt  session_entrypoint.py
schemas/: agent-yaml-schema.json
scripts/: backfill_hindsight.py  bootstrap.py  build_workflow_bundle.py  compose_profiles.py  set_secret.py
session-manager/: Dockerfile  container_lifecycle.py  heartbeat.py  housekeeping.py  main.py  memory_sync.py  runtime_launchers.py  workflow_config.py
shared/lib/: approvals.py  config.py  crypto.py  db.py  health_server.py  housekeeping.py  init_db.sql  mattermost_api.py  memory_catalog.py  message_bus.py  models.py  object_store.py  platform_secrets.py  task_queue.py  workflow_bundles.py  workflow_paths.py  workflow_repo_sync.py
skills/large-result-handling/: SKILL.md
skills/message-communication/: SKILL.md
skills/reflect/: SKILL.md
skills/splunk-queries/: SKILL.md
tests/: COVERAGE.md  README.md  conftest.py
tests/fakes/: __init__.py  hindsight.py  mcp_testserver.py  message.py  mock_llm.py
tests/runtime/: README.md  __init__.py  conftest.py  test_approval_scenario.py  test_bundle_transport_scenario.py  test_credentials_and_telemetry_scenario.py  test_happy_path_scenario.py  test_hooks_scenario.py  test_instruction_surface_scenario.py  test_lifecycle_scenario.py  test_mcp_header_scenario.py  test_mcp_variants_scenario.py  test_memory_scenario.py  test_subagent_and_questions_scenario.py  test_timeout_scenario.py
(+112 files in other folders)
