[project]
name = "ai-ops-platform"
version = "0.1.0"
description = "Agentic Ops — workflow-oriented Claude Code runtime"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk==0.2.110",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "minio>=7.2.0",
    "apscheduler>=3.10.0",
    "docker>=7.1.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "jsonschema>=4.23.0",
    "fastmcp>=3.0.0",
    "python-multipart>=0.0.9",
    "pyrage>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
connectors = [
    "google-cloud-pubsub>=2.23.0",
    "google-cloud-storage>=2.18.0",
    "beautifulsoup4>=4.12.3",
]
kubernetes = [
    "kubernetes>=30.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "shared",
    "gateway",
    "runtime",
]

[tool.ruff]
target-version = "py311"
line-length = 120
# Reference/scratch material, not shipped platform code: exploration notes and a
# standalone benchmark script (extras/llama_server_live_bench.py) that isn't part
# of any deployed service.
extend-exclude = ["extras"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
# S101: assert is expected in tests. S104: binding to 0.0.0.0 is intentional in containers.
# B008: FastMCP's CurrentHeaders() (and similar dependency markers) are meant to be used as
# function-default arguments -- this is the framework's supported DI pattern (like FastAPI's
# Depends()), not a mutable-default-argument bug. All 27 occurrences are this exact pattern.
ignore = ["S101", "S104", "B008"]

[tool.ruff.lint.per-file-ignores]
# Hardcoded dummy credentials/tokens/paths used only as test fixture values, never real secrets.
"tests/**" = ["S105", "S106", "S108"]
"mcps/core/mcp_memory.py" = ["E501"]
"mcps/integrations/mcp_cloudwatch.py" = ["E501"]
# Salesforce MCP builds server-capped, field-validated SOQL (never raw user SQL) and
# carries long tool-guidance docstrings; the query construction is the intended design.
"mcps/integrations/mcp_salesforce.py" = ["E501", "S608"]
# session-manager/ uses a hyphenated directory name by repo/deployment convention; it isn't
# imported as a dotted package, so the N999 module-name check doesn't apply here.
"session-manager/__init__.py" = ["N999"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
